# arcanum

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: cmake.yaml  mqueue.yaml
examples/: CMakeLists.txt
examples/co_produce/: CMakeLists.txt  awaiter.h  main.cpp  resumable_no_own.h
examples/external_polymorphism/: CMakeLists.txt  adapter.hpp  dump.hpp  dumpable.hpp  main.cpp  some_lib.hpp
examples/generator/: CMakeLists.txt  generator.h  main.cpp  resumable.h
examples/task_wrapper/: CMakeLists.txt  main.cpp  task_wrapper.hpp  vtable.hpp  vtable_for.h
examples/variant/: CMakeLists.txt  foo.cpp  foo.h  label.h  main.cpp
lib/cache/: CMakeLists.txt  readme.md
lib/cache/core/: CMakeLists.txt  cache.cpp  cache.h
lib/cache/examples/: CMakeLists.txt  example.cpp
lib/cache/policy/: lru_policy.h  test_policy.h
lib/cache/test/: CMakeLists.txt  basic.cpp  main.cpp  test_lru_policy.cpp
lib/cache/utils/: requires.h
lib/generator/: CMakeLists.txt
lib/generator/core/: CMakeLists.txt  generator.cpp  generator.h
lib/generator/example/: CMakeLists.txt  example.cpp
lib/mqueue/: CMakeLists.txt
lib/mqueue/core/: CMakeLists.txt
lib/mqueue/core/mqueue_base/: mqueue_base.cpp  mqueue_base.h
lib/mqueue/test/: CMakeLists.txt  main.cpp  test_mqueue_base.cpp
